App Endpoints and Update Doc
