# app/Http/Controllers/API/V1/CompanyController.php
@@ -44,7 +44,7 @@ class CompanyController extends Controller
      *      operationId="showCompanyProfile",
      *      description="Get Company Profile",
      *      summary="Get Company Profile",
-     *      tags={"W-Get Company Profile"},
+     *      tags={"W-Get Profiles"},
      *      @OA\Parameter(
      *          name="id",
      *          description="Company Id",
@@ -81,9 +81,62 @@ class CompanyController extends Controller
      */
     public function show($id)
     {
-        return $this->ok((new CompanyResource(Company::where('id', $id)->first()))->resolve());
-    }
+        $company = Company::where('id', $id)->first();
+        if (!$company) {
+            return  $this->notFound(['message' => 'Company Not Found']);
+        }
 
+        return $this->ok((new CompanyResource($company))->resolve());
+    }
+    /**
+     * @OA\Get(
+     *      path="/A/student/company/{id}",
+     *      operationId="showCompanyProfile",
+     *      description="Get Company Profile",
+     *      summary="Get Company Profile",
+     *      tags={"A-Get Profiles"},
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Company Id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     security={
+     *          {"passport": {}},
+     *     },
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessOkVirtual")
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *           @OA\JsonContent(ref="#/components/schemas/Response401Virtual")
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden",
+     *          @OA\JsonContent(ref="#/components/schemas/Response403Virtual")
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found",
+     *          @OA\JsonContent(ref="#/components/schemas/Response404Virtual")
+     *      )
+     * )
+     */
+    public function mshow($id)
+    {
+        $company = Company::where('id', $id)->first();
+        if (!$company) {
+            return  $this->notFound(['message' => 'Company Not Found']);
+        }
+        return $this->ok((new CompanyResource($company))->resolve());
+    }
     /**
      * Update the specified resource in storage.
      *
