# app/Http/Controllers/API/V1/InternshipPostController.php
@@ -19,7 +19,7 @@ class InternshipPostController extends Controller
      *      operationId="showInternship Post",
      *      description="Get Internship Post ",
      *      summary="Get Internship Post",
-     *      tags={"W-Get Internship Post"},
+     *      tags={"W-Get Profiles"},
      *      @OA\Parameter(
      *          name="id",
      *          description="Internship Post Id",
@@ -56,7 +56,61 @@ class InternshipPostController extends Controller
      */
     public function show($id)
     {
-        return $this->ok((new InternshipPostResource(InternshipPost::where('id', $id)->first()))->resolve());
+        $internship = InternshipPost::where('id', $id)->first();
+        if (!$internship) {
+            return  $this->notFound(['message' => 'Internship Post Not Found']);
+        }
+        return $this->ok((new InternshipPostResource($internship))->resolve());
+    }
+    /**
+     * @OA\Get(
+     *      path="/A/student/post/{id}",
+     *      operationId="showInternship Post",
+     *      description="Get Internship Post ",
+     *      summary="Get Internship Post",
+     *      tags={"A-Get Profiles"},
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Internship Post Id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     security={
+     *          {"passport": {}},
+     *     },
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessOkVirtual")
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *           @OA\JsonContent(ref="#/components/schemas/Response401Virtual")
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden",
+     *          @OA\JsonContent(ref="#/components/schemas/Response403Virtual")
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found",
+     *          @OA\JsonContent(ref="#/components/schemas/Response404Virtual")
+     *      )
+     * )
+     */
+    public function mshow($id)
+    {
+
+        $internship = InternshipPost::where('id', $id)->first();
+        if (!$internship) {
+            return  $this->notFound(['message' => 'Internship Post Not Found']);
+        }
+        return $this->ok((new InternshipPostResource($internship))->resolve());
     }
     /**
      * @OA\Get(
