# app/Http/Controllers/API/V1/TrainingAdvisorController.php
@@ -44,7 +44,7 @@ class TrainingAdvisorController extends Controller
      *      operationId="showAdvisorProfile",
      *      description="Get Advisor Profile",
      *      summary="Get Advisor Profile",
-     *      tags={"W-Get Advisor Profile"},
+     *      tags={"W-Get Profiles"},
      *      @OA\Parameter(
      *          name="id",
      *          description="Advisor Id",
@@ -82,9 +82,60 @@ class TrainingAdvisorController extends Controller
     public function show($id)
     {
         $advisor = TrainingAdvisor::where('id', $id)->first();
+        if (!$advisor) {
+            return  $this->notFound(['message' => 'Advisor Not Found']);
+        }
         return $this->ok((new TrainingAdvisorProfileResource($advisor))->resolve());
     }
-
+    /**
+     * @OA\Get(
+     *      path="/A/student/advisor/{id}",
+     *      operationId="showAdvisorProfile",
+     *      description="Get Advisor Profile",
+     *      summary="Get Advisor Profile",
+     *      tags={"A-Get Profiles"},
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Advisor Id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     security={
+     *          {"passport": {}},
+     *     },
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessOkVirtual")
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *           @OA\JsonContent(ref="#/components/schemas/Response401Virtual")
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden",
+     *          @OA\JsonContent(ref="#/components/schemas/Response403Virtual")
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found",
+     *          @OA\JsonContent(ref="#/components/schemas/Response404Virtual")
+     *      )
+     * )
+     */
+    public function mshow($id)
+    {
+        $advisor = TrainingAdvisor::where('id', $id)->first();
+        if (!$advisor) {
+            return  $this->notFound(['message' => 'Advisor Not Found']);
+        }
+        return $this->ok((new TrainingAdvisorProfileResource($advisor))->resolve());
+    }
     /**
      * Update the specified resource in storage.
      *
